Fix logo alignment

--- a/assets/css/_doc.less
+++ b/assets/css/_doc.less
@@ -160,7 +160,7 @@
 
     .logos-image {
       max-width: 150px;
-      max-height: 85px;
+      max-height: 80px;
     }
   }
 }
